[package]
name = "async-server"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
protocol = { path = "../protocol" }
serde_json = "1.0"

[dependencies.tokio]
version = "1.19"
features = [ "io-util", "macros", "net", "rt", "rt-multi-thread", "sync" ]

[dependencies.tokio-stream]
version = "0.1"
features = [ "io-util", "net" ]
